--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    transition: background-color 0.5s ease;    
   }
   
   .grid {
